# ESP32-S3-LR1121-XF

./: .gittignore  LICENSE  README.md
examples/arduino/waveshare_lroa_1121/: library.properties
examples/arduino/waveshare_lroa_1121/examples/lr1121_LoRaWAN/: lorawan_commissioning.h  lr1121_LoRaWAN.cpp  lr1121_LoRaWAN.h  lr1121_LoRaWAN.ino
examples/arduino/waveshare_lroa_1121/src/: lr1121_modem_hal.cpp  lr11xx_hal.cpp  wavesahre_lora_1121.cpp  wavesahre_lora_1121.h
examples/esp-idf/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
examples/esp-idf/components/gpio/: gpio.c  gpio.h
examples/esp-idf/components/lr1121/: CMakeLists.txt  lr1121_modem_hal.c  lr11xx_hal.c  wavesahre_lora_1121.c  wavesahre_lora_1121.h
examples/esp-idf/components/lr1121/lr1121_common/: lr1121_common.c  lr1121_common.h
examples/esp-idf/components/lr1121/lr1121_printers/: lr11xx_printf_info.c
examples/esp-idf/components/spi/: CMakeLists.txt  spi.c  spi.h
examples/esp-idf/main/: CMakeLists.txt  lr1121_config.c  lr1121_config.h  main.c
examples/esp-idf/main/examples/lr1121_LoRaWAN/: lorawan_commissioning.h  lr1121_LoRaWAN.c  lr1121_LoRaWAN.h
examples/esp-idf/main/examples/lr1121_cad/: lr1121_cad.c  lr1121_cad.h
examples/esp-idf/main/examples/lr1121_firmware_update/: lr1121_firmware_update.c  lr1121_firmware_update.h  lr1121_modem_05020001.h  lr1121_transceiver_0101.h  lr1121_transceiver_0102.h  lr1121_transceiver_0103.h
examples/esp-idf/main/examples/lr1121_lora_frag/: lr1121_lora_frag.c  lr1121_lora_frag.h
examples/esp-idf/main/examples/lr1121_lr_fhss/: lr1121_lr_fhss.c  lr1121_lr_fhss.h
examples/esp-idf/main/examples/lr1121_per/: lr1121_per.c  lr1121_per.h
examples/esp-idf/main/examples/lr1121_ping_pong/: lr1121_ping_pong.c  lr1121_ping_pong.h
examples/esp-idf/main/examples/lr1121_read/: lr1121_read.c  lr1121_read.h
examples/esp-idf/main/examples/lr1121_sigfox/: lr1121_sigfox.c  lr1121_sigfox.h
examples/esp-idf/main/examples/lr1121_spectral_scan/: lr1121_spectral_scan.c  lr1121_spectral_scan.h
examples/esp-idf/main/examples/lr1121_spetrum_display/: curve_plot.c  curve_plot.h  lr1121_spetrum_display.c  lr1121_spetrum_display.h
examples/esp-idf/main/examples/lr1121_tx_cw/: lr1121_tx_cw.c  lr1121_tx_cw.h
examples/esp-idf/main/examples/lr1121_tx_infinite_preamble/: lr1121_tx_infinite_preamble.c  lr1121_tx_infinite_preamble.h
examples/esp-idf/main/examples/lr1121_write/: lr1121_write.c  lr1121_write.h
examples/meshtastic/ESP32-S3-LR1121-XF/: platformio.ini  rfswitch.h  variant.h
hardware/dimensions/: ESP32-S3-LR1121.PcbLib
(+51 files in other folders)
